[package]
name = "cmacros"
description = "Functions for parsing #define macros from C headers and translating them to Rust code"
version = "0.1.0"
authors = ["Robert Knight <robertknight@gmail.com>", "Alexey Gerasev <alexey.gerasev@gmail.com>"]
repository = "https://github.com/nthend/rust-cmacros"
readme = "README.md"
license = "MIT"

[dev_dependencies]
walker="^1.0.0"
argparse="^0.2.0"

[[example]]
name = "parse_all_headers"
path = "examples/parse_all_headers.rs"

[[example]]
name = "translate_macros"
path = "examples/translate_macros.rs"